<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.mysteq.software.rssirecordernew.activities.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/selectedPlanLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="selected plan:" />

        <TextView
            android:id="@+id/selectedPlanTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" -- none --" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="New measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newMeasureButton"
                android:layout_row="0"
                android:layout_column="0"
                android:textAlignment="center"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp"
                android:textAllCaps="false" />



            <Button
                android:text="Continue last measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/continueMeasureButton"
                android:layout_row="1"
                android:layout_column="0"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textAllCaps="false"
                android:enabled="false" />
            <Button
                android:id="@+id/openViewMeasureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:fontFamily="sans-serif-medium"
                android:text="View measures"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/algorithmLaunchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="20dp"
                android:layout_row="5"
                android:fontFamily="sans-serif-medium"
                android:text="Navigate"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="normal|italic"
                android:visibility="gone" />

            <Button
                android:id="@+id/synchronizeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="9"
                android:fontFamily="sans-serif-medium"
                android:text="Synchronize"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/openPlanManagerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:fontFamily="sans-serif-medium"
                android:text="Manage plans"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp" />


            <Button
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="8"
                android:fontFamily="sans-serif-medium"
                android:text="Settings"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/openRecordPathButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:text="Record Path"
                android:textAllCaps="false"
                android:textSize="24sp" />

        </GridLayout>
    </LinearLayout>
</RelativeLayout>
