<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scanning"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.mysteq.software.rssirecordernew.activities.ScanningActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:scrollbars="horizontal|vertical"
        android:scaleX="1"
        android:scaleY="1"
        android:fadeScrollbars="false"
        android:scrollbarFadeDuration="0"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:id="@+id/frameLayoutWithImages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/markupMeasuresImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:clickable="false"
                android:elevation="2dp"
                android:scaleType="matrix"
                android:scaleX="1"
                android:scaleY="1" />

            <ImageView
                android:id="@+id/buildingPlanImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:elevation="1dp"
                android:scaleType="matrix"
                android:scaleX="1"
                android:scaleY="1" />


        </FrameLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/degreesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="degrees: " />

            <TextView
                android:id="@+id/degreesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/directionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="direction:" />

            <TextView
                android:id="@+id/directionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/counterSummaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Measures. Current:0 Total:0" />

            <TextView
                android:id="@+id/selectedSectorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="(Sector not selected)" />
        </LinearLayout>

        <TextView
            android:id="@+id/scanningTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="44dp"
            android:editable="false"
            android:fadeScrollbars="false"
            android:maxLines="4"
            android:password="false"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:text=" "
            android:textAppearance="@style/AppTheme"
            android:visibility="gone" />

        <SeekBar
            android:id="@+id/zoomSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:max="3"
            android:progress="0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/mostLeftButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-- obrot"
                android:textSize="12sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/leftButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="zapisz"
                android:textSize="12sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/rightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Autoscan"
                android:textSize="12sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/mostRightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="lock rotation/calibrate"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>
    <ImageButton
        android:id="@+id/directionImageButton"
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_alignParentRight="true"
        android:scaleType="fitCenter"
        android:src="@drawable/red_arrow" />
</RelativeLayout>
